{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 898,
  "lineage": "c2442024-3b2d-b65a-46e6-7836a0675fc3",
  "resources": [
    {
      "module": "module.application_a[\"a\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pineapple-a-network",
            "internal_domain_name_suffix": "ofrpf1vfkgeezczonuigseq2rg.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pineapple-a-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-a-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-a-vnet/subnets/pineapple-a-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pineapple-a-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.application_a.azurerm_public_ip.main",
            "module.application_a.azurerm_subnet.subnet",
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"a\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pineapple-a",
            "location": "uksouth",
            "name": "pineapple-a",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.application_a[\"a\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pineapplication-a",
            "fqdn": "pineapplication-a.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-a-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.108.247.140",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pineapple-a-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"a\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-a-vnet/subnets/pineapple-a-subnet",
            "name": "pineapple-a-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pineapplicaiton-vnet-a-vnet"
          },
          "dependencies": [
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"a\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "eef26271-51a5-4c88-8b2e-6d1069121c8e",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-a-vnet",
            "location": "uksouth",
            "name": "pineapplicaiton-vnet-a-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"b\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pineapple-b-network",
            "internal_domain_name_suffix": "clhbzyty0eguxiejox5tdwnssb.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pineapple-b-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-b-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-b-vnet/subnets/pineapple-b-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pineapple-b-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.application_a.azurerm_public_ip.main",
            "module.application_a.azurerm_subnet.subnet",
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"b\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pineapple-b",
            "location": "uksouth",
            "name": "pineapple-b",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.application_a[\"b\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pineapplication-b",
            "fqdn": "pineapplication-b.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-b-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.108.242.129",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pineapple-b-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"b\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-b-vnet/subnets/pineapple-b-subnet",
            "name": "pineapple-b-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pineapplicaiton-vnet-b-vnet"
          },
          "dependencies": [
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"b\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e21cce12-d178-4b0d-a089-75ff31d9b291",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-b-vnet",
            "location": "uksouth",
            "name": "pineapplicaiton-vnet-b-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"c\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pineapple-c-network",
            "internal_domain_name_suffix": "jn4reri4ipmubkbwvz0stc3cgh.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pineapple-c-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-c-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-c-vnet/subnets/pineapple-c-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pineapple-c-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.application_a.azurerm_public_ip.main",
            "module.application_a.azurerm_subnet.subnet",
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"c\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pineapple-c",
            "location": "uksouth",
            "name": "pineapple-c",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.application_a[\"c\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pineapplication-c",
            "fqdn": "pineapplication-c.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-c-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.108.247.86",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pineapple-c-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"c\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-c-vnet/subnets/pineapple-c-subnet",
            "name": "pineapple-c-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pineapplicaiton-vnet-c-vnet"
          },
          "dependencies": [
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"c\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "45127d4b-431e-40d9-a836-ae75298ba237",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-c-vnet",
            "location": "uksouth",
            "name": "pineapplicaiton-vnet-c-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"d\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pineapple-d-network",
            "internal_domain_name_suffix": "1pooioit13lehelwqpj1otw4lg.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pineapple-d-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-d-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-d-vnet/subnets/pineapple-d-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pineapple-d-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.application_a.azurerm_public_ip.main",
            "module.application_a.azurerm_subnet.subnet",
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"d\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pineapple-d",
            "location": "uksouth",
            "name": "pineapple-d",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.application_a[\"d\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pineapplication-d",
            "fqdn": "pineapplication-d.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-d-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.108.241.163",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pineapple-d-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"d\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-d-vnet/subnets/pineapple-d-subnet",
            "name": "pineapple-d-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pineapplicaiton-vnet-d-vnet"
          },
          "dependencies": [
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"d\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "39e4dcdb-df13-4356-9176-83d3b74ede5e",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-d-vnet",
            "location": "uksouth",
            "name": "pineapplicaiton-vnet-d-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"e\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pineapple-e-network",
            "internal_domain_name_suffix": "lt4cc1otpiye3orowiwe4ysddb.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pineapple-e-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-e-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-e-vnet/subnets/pineapple-e-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pineapple-e-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.application_a.azurerm_public_ip.main",
            "module.application_a.azurerm_subnet.subnet",
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"e\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pineapple-e",
            "location": "uksouth",
            "name": "pineapple-e",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.application_a[\"e\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pineapplication-e",
            "fqdn": "pineapplication-e.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-e-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.108.247.100",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pineapple-e-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"e\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-e-vnet/subnets/pineapple-e-subnet",
            "name": "pineapple-e-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pineapplicaiton-vnet-e-vnet"
          },
          "dependencies": [
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"e\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6d21fc5c-7ad3-4e30-ba2e-b22c4f624319",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-e-vnet",
            "location": "uksouth",
            "name": "pineapplicaiton-vnet-e-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"f\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pineapple-f-network",
            "internal_domain_name_suffix": "pf1wwbs3w50ufo33xmnxofofyg.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pineapple-f-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-f-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-f-vnet/subnets/pineapple-f-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pineapple-f-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.application_a.azurerm_public_ip.main",
            "module.application_a.azurerm_subnet.subnet",
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"f\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pineapple-f",
            "location": "uksouth",
            "name": "pineapple-f",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.application_a[\"f\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pineapplication-f",
            "fqdn": "pineapplication-f.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-f-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.108.247.151",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pineapple-f-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"f\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-f-vnet/subnets/pineapple-f-subnet",
            "name": "pineapple-f-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pineapplicaiton-vnet-f-vnet"
          },
          "dependencies": [
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"f\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "066b7779-b75d-42f5-bbbd-bb1b7715c5c6",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-f-vnet",
            "location": "uksouth",
            "name": "pineapplicaiton-vnet-f-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"g\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pineapple-g-network",
            "internal_domain_name_suffix": "ybuoi1zcaomubmznljgzyxas2a.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pineapple-g-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-g-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-g-vnet/subnets/pineapple-g-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pineapple-g-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.application_a.azurerm_public_ip.main",
            "module.application_a.azurerm_subnet.subnet",
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"g\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pineapple-g",
            "location": "uksouth",
            "name": "pineapple-g",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.application_a[\"g\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pineapplication-g",
            "fqdn": "pineapplication-g.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-g-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.108.247.91",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pineapple-g-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"g\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-g-vnet/subnets/pineapple-g-subnet",
            "name": "pineapple-g-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pineapplicaiton-vnet-g-vnet"
          },
          "dependencies": [
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"g\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6fe468c0-0322-4099-b32d-5a4d9c5c12e0",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-g-vnet",
            "location": "uksouth",
            "name": "pineapplicaiton-vnet-g-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"h\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pineapple-h-network",
            "internal_domain_name_suffix": "pkjkeqniidkelamxg0yw1syr3g.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pineapple-h-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-h-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-h-vnet/subnets/pineapple-h-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pineapple-h-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.application_a.azurerm_public_ip.main",
            "module.application_a.azurerm_subnet.subnet",
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"h\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pineapple-h",
            "location": "uksouth",
            "name": "pineapple-h",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.application_a[\"h\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pineapplication-h",
            "fqdn": "pineapplication-h.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-h-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.108.247.136",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pineapple-h-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"h\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-h-vnet/subnets/pineapple-h-subnet",
            "name": "pineapple-h-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pineapplicaiton-vnet-h-vnet"
          },
          "dependencies": [
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"h\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "41a2927a-40a8-45d4-8197-36b16dcb11ee",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-h-vnet",
            "location": "uksouth",
            "name": "pineapplicaiton-vnet-h-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"i\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pineapple-i-network",
            "internal_domain_name_suffix": "h2kuwbviifxunifvpgt1sr2oaa.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pineapple-i-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-i-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-i-vnet/subnets/pineapple-i-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pineapple-i-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.application_a.azurerm_public_ip.main",
            "module.application_a.azurerm_subnet.subnet",
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"i\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pineapple-i",
            "location": "uksouth",
            "name": "pineapple-i",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.application_a[\"i\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pineapplication-i",
            "fqdn": "pineapplication-i.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-i-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.108.247.111",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pineapple-i-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"i\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-i-vnet/subnets/pineapple-i-subnet",
            "name": "pineapple-i-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pineapplicaiton-vnet-i-vnet"
          },
          "dependencies": [
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"i\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "064b153f-41a8-466f-a0b5-79a7b9478e00",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-i-vnet",
            "location": "uksouth",
            "name": "pineapplicaiton-vnet-i-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"j\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pineapple-j-network",
            "internal_domain_name_suffix": "pnvmx4b2u04eld0mzmzqpr1kzc.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pineapple-j-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-j-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-j-vnet/subnets/pineapple-j-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pineapple-j-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.application_a.azurerm_public_ip.main",
            "module.application_a.azurerm_subnet.subnet",
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"j\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pineapple-j",
            "location": "uksouth",
            "name": "pineapple-j",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.application_a[\"j\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pineapplication-j",
            "fqdn": "pineapplication-j.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pineapple-j-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.108.247.96",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pineapple-j-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.application_a[\"j\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-j-vnet/subnets/pineapple-j-subnet",
            "name": "pineapple-j-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pineapplicaiton-vnet-j-vnet"
          },
          "dependencies": [
            "module.application_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.application_a[\"j\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f8cb6a7b-a63c-45bc-8f4c-cb3307c76aca",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pineapplicaiton-vnet-j-vnet",
            "location": "uksouth",
            "name": "pineapplicaiton-vnet-j-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    }
  ]
}